--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="01-PlantillaBase" default="default" basedir=".">
-    <description>Builds, tests, and runs the project 01-PlantillaBase.</description>
+<project name="06-Letra_DNI" default="default" basedir=".">
+    <description>Builds, tests, and runs the project 06-Letra_DNI.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="01-PlantillaBase-impl.jar">
+        <target name="run" depends="06-Letra_DNI-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
